Fix image alignment

--- a/src/scss/yellow/components/_thumbnail.scss
+++ b/src/scss/yellow/components/_thumbnail.scss
@@ -32,8 +32,9 @@
     .thumbnail__photo {
       img {
         border-radius: $size-border-radius-m;
-        height: auto;
         max-height: 100%;
+        position: relative;
+        bottom: 33px;
       }
     }
   }
